Fixed layout problems

--- a/ZiggyChat/shinychat.css
+++ b/ZiggyChat/shinychat.css
@@ -1,21 +1,26 @@
-#chat {
+/*#chat {
   padding: .5em;
   border: 1px solid #777;
   height: 450px;
   overflow-y: scroll;
 }
+*/
+
+#chat-container {
+  padding: .5em;
+  border: 1px solid #DFDFDF;
+  height: 100%;
+  overflow-y: scroll;
+
+}
 
 #send{
-  margin-top: 22px;
+  margin-top: 20px;
 }
 
 .username {
   font-weight: bold;
   color: #226;
-}
-
-html, body {
-  height: 100%;
 }
 
 .table {
@@ -24,4 +29,8 @@ html, body {
 
 .plot, .table{
   margin-top: 1em;
+}
+
+h1 {
+  margin-top: 5px;
 }
